# extractor

./: .gitignore  __main__.py  env.example  pyproject.toml
src/api/routers/: root.py
src/configs/: __init__.py  application.py
src/core/: __init__.py  application.py
src/loggers/: __init__.py
