[tool.poetry]
name = "extractor"
version = "0.1.0"
description = ""
authors = ["Artem <artem.golubev@aiso.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
fastapi = {extras = ["all"], version = "^0.115.0"}
pydantic-settings = "^2.5.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
